styles: some dark mode fixes

--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -44,9 +44,10 @@
     }
     
     &__header {
-        background-color: rgb(241, 241, 241);
-        
+        background-color: var(--bg  -light-color);
+        opacity: .8;
         &-container {
+            color: var(--text-dark-color);
             padding: 1rem;
             border-bottom: 1px solid rgba(51, 51, 51, 0.117);
             display: flex;
@@ -64,7 +65,7 @@
 
         &-close {
             cursor: pointer;
-            color: rgba(51, 51, 51, 0.555);
+            color: var(--text-dark-color);
         }
     }
 
@@ -159,7 +160,7 @@
 
             &-close {
                 padding: .5em .5em;
-                background-color:#333;
+                background-color:var(--bg-dark-color);
                 border-radius: 1rem;
                 text-decoration: none;
                 color:var(--text-light-color);
