--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -61,7 +61,7 @@
             font-family: 'VT323', monospace;;
         }
         &__menu-switch {
-            background: #343d5b;
+            background: var(--secondary-color);
             border-radius: 1000px;
             border: none;
             position: relative;
@@ -83,7 +83,7 @@
                 box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
             }
             &.active {
-                background: orange;
+                background: var(--primary-color);
                 color: #000;
                 &::after {
                     right: 0;
