--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -30,7 +30,10 @@ body {
 
   &.body-dark {
     background: rgb(39, 39, 39);
-    color: white;
+    color: rgb(238, 238, 238);
+    --text-light-color: rgb(244, 236, 236);
+    --text-dark-color: rgb(244, 236, 236);
+    --bg-light-color: rgb(71, 70, 70);
   }
 }
 
@@ -42,4 +45,6 @@ body {
 
 .main{
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
