--- a/src/scss/productos.scss
+++ b/src/scss/productos.scss
@@ -3,6 +3,7 @@ $bold: $regular + 300;
 $black: $regular + 500;
 
 .productos {
+    flex-grow: 1;
     margin-top: 2rem;
     margin-bottom: 2rem;
     width: 100%;
